--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <img id="myImage"> -->
+    <input id="myFileInput" type="file">
+    <input id="myFileNameInput">
+    <button id="mySendBtn">Send file</button>
+    <h1 id="myResult"></h1>
 </body>
 </html>
